manifests/workloads/checkout-backend-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wl-04-backend-api
  namespace: default
  labels:
    test.kube-agents.io/workload: cluster-04
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: api-server
        image: nginx:alpine
