manifests/workloads/stateful-postgres-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wl-05-stateful-db
  namespace: default
  labels:
    test.kube-agents.io/workload: cluster-05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful-db
  template:
    metadata:
      labels:
        app: stateful-db
    spec:
      containers:
      - name: db
        image: postgres:15-alpine
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: pvc-unbound-claim
