manifests/workloads/user-auth-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-auth
  labels:
    cost-center: "finops-auth-202"
    owner: "security-team"
    pod-security.kubernetes.io/enforce: "baseline"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-auth-service
  namespace: prod-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-auth-service
  template:
    metadata:
      labels:
        app: user-auth-service
    spec:
      containers:
      - name: app
        image: gcr.io/gca-gke-2025/private-secure-app:v1.0.0
